--- a/src/app/components/auth/account-settings/profile/profile.component.html
+++ b/src/app/components/auth/account-settings/profile/profile.component.html
@@ -189,7 +189,7 @@
                                 <ngb-panel id="otp-sidebar3">
                                     <ng-template ngbPanelTitle>
                                         <div class="heading-step1">
-                                            <h4>Phone Number </h4>
+                                            <h4>Phone Numbers </h4>
                                             <!-- <span class="highlight-info">{{UserDetails?.mobilePhone}}, {{UserDetails?.mobilePhone}}</span> -->
                                             <span class="highlight-info">Mobile, Home</span>
                                             <span class="arrow-stepp">
@@ -254,7 +254,7 @@
                                     <path id="Path_2161" data-name="Path 2161" d="M14.824,6.42,13.619,7.625,15.825,9.84H7.13v1.71h8.695l-2.206,2.206,1.205,1.214L19.1,10.695ZM3.71,4.71h6.84V3H3.71A1.715,1.715,0,0,0,2,4.71V16.679a1.715,1.715,0,0,0,1.71,1.71h6.84v-1.71H3.71Z" transform="translate(-2 -3)" fill="#333"/>
                                     </svg></span></div>
                                 <div class="svgBtn">
-                                    <button (click)="logout()" > Sign Out</button></div>
+                                    <button (click)="logout()"> Sign Out</button></div>
                             </div>
                         </div>
                     </div>
