--- a/src/styles.css
+++ b/src/styles.css
@@ -1541,9 +1541,10 @@ div#card-info form#cardForm footer.panel__footer {
     padding-left: 15px;
 }
 
-.enrollment-page div#otp-sidebar {
+
+/* .enrollment-page div#otp-sidebar {
     padding: 20px;
-}
+} */
 
 
 /* .content-card.steps-inner.promo-checkout {
