--- a/src/app/components/auth/account-settings/payments/payments.component.css
+++ b/src/app/components/auth/account-settings/payments/payments.component.css
@@ -485,3 +485,10 @@ section.address-page .delete a {
         margin: 0px 12px;
     }
 }
+
+.invalid-feedback-customclass {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #dc3545;
+}
