--- a/src/app/components/auth/account-settings/addresses/addresses.component.html
+++ b/src/app/components/auth/account-settings/addresses/addresses.component.html
@@ -34,7 +34,8 @@
                                             </div>
                                             <div class="emailbtns">
                                                 <div class="cancles">
-                                                    <a href="#"> <button class="cancle-btn">Cancel</button></a>
+                                                  <a data-toggle="collapse" href="#promo-sidebar1" role="button" aria-expanded="false" aria-controls="promo-sidebar1"> <button class="cancle-btn">Cancel</button></a>
+                                                    <!-- <a href="#"> <button class="cancle-btn">Cancel</button></a> -->
                                                 </div>
                                                 <div class="saves">
                                                     <a href="#"> <button class="save-btn">Save</button></a>
@@ -87,7 +88,7 @@
                                                     </div>
 
                                                     <div class="col-sm-6">
-                                                          
+
                                                                 <input class="form-control personalInfo"   placeholder="State" formControlName="state" [ngClass]="{ 'is-invalid': addressSubmitted && s.state?.errors }" data-role="state" data-val="true" data-val-required="state is required" id="ShippingAddress_state" name="ShippingAddress.state" type="text" value="">
                                                                 <!-- <span class="field-validation-valid" data-valmsg-for="ShippingAddress.state" data-valmsg-replace="true"></span> -->
                                                                 <div *ngIf="addressSubmitted && s.state.errors" class="field-validation-valid">
@@ -112,12 +113,12 @@
                                                                   </div>
                                                                 <p></p>
                                                             </div>
-                                                        
+
                                                     </div>
 
                                                     <div class=" col-sm-12 pinfo">
                                                         <div class="emailbtns">
-                                                           
+
                                                             <div class="saves">
                                                                 <button class="save-btn">Save Changes</button>
                                                             </div>
