--- a/src/app/components/auth/account-settings/payments/payments.component.html
+++ b/src/app/components/auth/account-settings/payments/payments.component.html
@@ -38,13 +38,13 @@
 
                                         </div>
                                         <div class="emailbtns secondarybtn">
-                                    
+
                                             <div class="cancles">
                                                 <a href="#"> <button class="cancle-btn">Edit Card</button></a>
                                             </div>
 
                                             <div class="delete">
-                                                <a href="#"> <i class="fas fa-trash"> <span> Delete</span></i></a>
+                                                <a  > <i class="fas fa-trash" (click)="deleteCard(item.type)"> <span  > Delete</span></i></a>
                                             </div>
                                         </div>
                                     </ng-template>
@@ -66,7 +66,7 @@
                                         </div>
                                     </ng-template>
                                     <ng-template ngbPanelContent>
-
+                                      <form [formGroup]="onPaymentSubmitForm" (ngSubmit)="onPaymentSubmit()">
                                         <div class="content-card steps-inner shipping-address-form">
                                             <ul class="card-mat">
                                                 <li><img src="../../assets/card-ui-1.png" /></li>
@@ -94,7 +94,7 @@
                                                                 <div *ngIf="p.cardNumber?.errors.required">Card Number is required</div>
                                                                 <div *ngIf="p.cardNumber.errors.minlength">Card Number must be at least 14 numbers </div>
                                                             </div>
-                                                            <div *ngIf="cardvalidate" class="cardvalidateerror">
+                                                            <div *ngIf="cardvalidate" class="invalid-feedback-customclass">
                                                                 <div *ngIf="cardvalidate">Card Number is not valid
                                                                 </div>
                                                             </div>
@@ -104,7 +104,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-6">
                                                         <div class="form-group">
-                                                            <input type="text" formControlName="expiryMonth" [(ngModel)]="checkMonth" (change)="validateCard()" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="00" placeholder="Month" name="expiryMonth" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryMonth?.errors }"/>
+                                                            <input type="text" formControlName="expiryMonth" [(ngModel)]="checkMonth" (change)="validateCard()"  [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="00" placeholder="Month" name="expiryMonth" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryMonth?.errors }"/>
                                                             <div *ngIf="paymentSubmitted && p.expiryMonth?.errors" class="invalid-feedback">
                                                                 <div *ngIf="p.expiryMonth?.errors.required">
                                                                     Expiry Month is required</div>
@@ -142,9 +142,9 @@
                                                             <div class="req">
                                                                 <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City"></label>
                                                             </div>
-                                                            <input type="text" formControlName="cardCVV" placeholder="Street address" name="cardCVV" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="000" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardCVV?.errors }" />
-                                                            <div *ngIf="paymentSubmitted && p.cardCVV?.errors" class="invalid-feedback">
-                                                                <div *ngIf="p.cardCVV?.errors.required">Street Address</div>
+                                                            <input type="text" formControlName="newStreetAddress" placeholder="Street address" name="cardCVV"  class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.newStreetAddress?.errors }" />
+                                                            <div *ngIf="paymentSubmitted && p.newStreetAddress?.errors" class="invalid-feedback">
+                                                                <div *ngIf="p.cardCVV?.errors.required">Street Address is Required</div>
 
                                                             </div>
                                                             <div class="req">
@@ -155,19 +155,21 @@
                                                             <div class="row">
                                                                 <div class="col-sm-6">
                                                                     <div class="form-group">
-                                                                        <input type="text" formControlName="expiryMonth" mask="00" placeholder="City" name="expiryMonth" class="form-control" />
-                                                                        <div class="invalid-feedback-customclass">
-                                                                            <div *ngIf="monthError">Month is not valid</div>
-                                                                        </div>
+                                                                        <input type="text" [ngClass]="{'is-invalid': paymentSubmitted && p.newCity?.errors } " formControlName="newCity"  placeholder="City" name="expiryMonth" class="form-control" />
+
+                                                                        <div *ngIf="paymentSubmitted && p.newCity?.errors " class="invalid-feedback ">
+                                                                          <div *ngIf="p.newCity?.errors.required ">
+                                                                              city is required.</div>
+                                                                      </div>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-6">
                                                                     <div class="form-group">
-                                                                        <input type="text" formControlName="expiryYear" placeholder="State" name="expiryYear" mask="0000" class="form-control" />
-
-                                                                        <div *ngIf="paymentSubmitted && p.expiryYear?.errors " class="invalid-feedback ">
-                                                                            <div *ngIf="p.expiryYear?.errors.required ">
-                                                                                Expiry Year is required</div>
+                                                                        <input type="text" formControlName="newState" [ngClass]="{
+                                                                          'is-invalid': paymentSubmitted && p.newState?.errors } " placeholder="State" name="expiryYear"  class="form-control" />
+                                                                        <div *ngIf="paymentSubmitted && p.newState?.errors " class="invalid-feedback ">
+                                                                            <div *ngIf="p.newState?.errors.required ">
+                                                                                state  is required</div>
                                                                         </div>
                                                                         <div *ngIf="yearError " class="invalid-feedback-customclass ">
                                                                             <div *ngIf="yearError ">Year is not valid</div>
@@ -177,10 +179,10 @@
                                                             </div>
 
 
-                                                            <input type="text " formControlName="cardCVV " placeholder="ZIP " name="cardCVV " [showMaskTyped]="false " [dropSpecialCharacters]="false " mask="000 " class="form-control " [ngClass]="{
-                                                                            'is-invalid': paymentSubmitted && p.cardCVV?.errors } " />
-                                                            <div *ngIf="paymentSubmitted && p.cardCVV?.errors " class="invalid-feedback ">
-                                                                <div *ngIf="p.cardCVV?.errors.required ">Zip</div>
+                                                            <input type="text " formControlName="newZip " placeholder="ZIP " name="cardCVV" class="form-control " [ngClass]="{
+                                                                            'is-invalid': paymentSubmitted && p.newZip?.errors } " />
+                                                            <div *ngIf="paymentSubmitted && p.newZip?.errors " class="invalid-feedback ">
+                                                                <div *ngIf="p.newZip?.errors.required ">zip is required.</div>
 
                                                             </div>
 
@@ -188,10 +190,10 @@
                                                                 <label class="control-label visible-xs required requiredField " for="Customer_MainAddress_City "></label>
                                                             </div>
 
-                                                            <input type="text " formControlName="cardCVV " placeholder="Country " name="cardCVV " [showMaskTyped]="false " [dropSpecialCharacters]="false " mask="000 " class="form-control " [ngClass]="{
-                                                                            'is-invalid': paymentSubmitted && p.cardCVV?.errors } " />
-                                                            <div *ngIf="paymentSubmitted && p.cardCVV?.errors " class="invalid-feedback ">
-                                                                <div *ngIf="p.cardCVV?.errors.required ">Country</div>
+                                                            <input type="text " formControlName="newCountry " placeholder="Country " name="cardCVV "   class="form-control " [ngClass]="{
+                                                                            'is-invalid': paymentSubmitted && p.newCountry?.errors } " />
+                                                            <div *ngIf="paymentSubmitted && p.newCountry?.errors " class="invalid-feedback ">
+                                                                <div *ngIf="p.newCountry?.errors.required ">country is required.</div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -203,10 +205,11 @@
 
                                             <div class="saveWraper">
                                                 <div class="savesChanges">
-                                                    <a href="#"> <button class="save-btn">Save Changes</button></a>
+                                                    <a href="#"> <button class="save-btn" type="submit">Save Changes</button></a>
                                                 </div>
                                             </div>
                                         </div>
+                                        </form>
                                     </ng-template>
                                 </ngb-panel>
 
@@ -242,7 +245,7 @@
                                                 <a href="#"> <button class="save-btns"> Make Primary</button></a>
                                             </div>
                                             <div class="cancles">
-                                                <a href="#"> <button class="cancle-btn">Edit Card</button></a>
+                                                <a> <button class="cancle-btn" (click)="deleteCard(item.type)">Edit Card</button></a>
                                             </div>
 
                                             <div class="delete">
