--- a/src/app/components/auth/account-settings/addresses/addresses.component.html
+++ b/src/app/components/auth/account-settings/addresses/addresses.component.html
@@ -8,7 +8,6 @@
                             <h1 class="profileField">Addresses</h1>
 
                             <ngb-accordion activeIds="">
-
                                 <ngb-panel id="promo-sidebar1"  *ngFor="let address of addressess; let i = index">
                                     <ng-template ngbPanelTitle>
                                         <div class="heading-step1 profile-section">
@@ -38,13 +37,81 @@
                                                     <!-- <a href="#"> <button class="cancle-btn">Cancel</button></a> -->
                                                 </div>
                                                 <div class="saves">
-                                                    <a href="#"> <button class="save-btn">Save</button></a>
+                                                    <a href="#"> <button class="save-btn" (click)="open(produt_view,address)">Edit</button></a>
                                                 </div>
 
                                             </div>
                                         </form>
                                     </ng-template>
                                 </ngb-panel>
+
+                                <ng-template #produt_view let-modal>
+                                  <div id="view-logininformation-798275e4-d1dd-4d37-a977-497293c0fe5d">
+                                    <form [formGroup]="editShippingAddressForm" (ngSubmit)="oneEditAddressSubmit()">
+                                    <div class="row ">
+                                        <div class=" col-sm-12 pinfo">
+                                                    <input formControlName="streetAddress1" [(ngModel)]="address.mainAddress1" placeholder="Street address" [ngClass]="{ 'is-invalid': editShippingAddressForm && e.streetAddress1?.errors }" class="form-control personalInfo" data-role="Address1" data-val="true" data-val-required="Street Address is required" id="Shippi" name="ShippingAddr" type="text" value="">
+                                                    <!-- <span class="field-validation-valid" data-valmsg-for="ShippingAddress.Address1" data-valmsg-replace="true"></span> -->
+                                                    <div *ngIf="editShippingAddressForm && e.streetAddress1.errors" class="field-validation-valid">
+                                                        <div *ngIf="e.streetAddress1.errors.required">street Address is required</div>
+                                                      </div>
+                                                    <!-- <label for="form-label">Street address</label>  -->
+                                                    <p></p>
+
+                                        </div>
+                                        <div class="col-sm-6">
+
+                                                    <input class="form-control personalInfo" [(ngModel)]="address.mainCity"  placeholder="City" formControlName="city1"[ngClass]="{ 'is-invalid': editShippingAddressForm && e.city1?.errors }"  data-role="City" data-val="true" data-val-required="city is required" id="Ship" name="ShippingAddre" type="text" value="">
+                                                    <div *ngIf="editShippingAddressForm && e.city1.errors" class="field-validation-valid">
+                                                        <div *ngIf="e.city1.errors.required">city is required</div>
+                                                      </div>
+                                                    <p></p>
+                                        </div>
+
+                                        <div class="col-sm-6">
+
+                                                    <input class="form-control personalInfo" [(ngModel)]="address.mainState"   placeholder="State" formControlName="state1" [ngClass]="{ 'is-invalid': editShippingAddressForm && e.state1?.errors }" data-role="state" data-val="true" data-val-required="state is required" id="Shi" name="ShippingAddre" type="text" value="">
+                                                    <!-- <span class="field-validation-valid" data-valmsg-for="ShippingAddress.state" data-valmsg-replace="true"></span> -->
+                                                    <div *ngIf="editShippingAddressForm && e.state1.errors" class="field-validation-valid">
+                                                        <div *ngIf="e.state1.errors.required">state is required</div>
+                                                      </div>
+                                                    <p></p>
+                                        </div>
+                                        <div class=" col-sm-12 pinfo">
+                                                <div>
+                                                    <input class="form-control personalInfo"  [(ngModel)]="address.mainZip" placeholder="Zip" formControlName="zip1" [ngClass]="{ 'is-invalid': editShippingAddressForm && e.zip1?.errors }"  data-role="zip" data-val="true" data-val-required="zip is required" id="ShippingAddr" name="ShippingAddr" type="text" value="">
+                                                    <!-- <span class="field-validation-valid" data-valmsg-for="ShippingAddress.zip" data-valmsg-replace="true"></span> -->
+                                                    <div *ngIf="editShippingAddressForm && e.zip1.errors" class="field-validation-valid">
+                                                        <div *ngIf="e.zip1.errors.required">zip is required</div>
+                                                      </div>
+                                                    <p></p>
+                                                </div>
+                                                <div>
+                                                    <input class="form-control personalInfo" [(ngModel)]="country"  formControlName="country1" placeholder="Country" [ngClass]="{ 'is-invalid': editShippingAddressForm && e.country1?.errors }" data-role="country" data-val="true" data-val-required="countryis required" id="ShippingAd" name="ShippingAddre" type="text" value="">
+                                                    <!-- <span class="field-validation-valid" data-valmsg-for="ShippingAddress.country" data-valmsg-replace="true"></span> -->
+                                                    <div *ngIf="editShippingAddressForm && e.country1.errors" class="field-validation-valid">
+                                                        <div *ngIf="e.country1.errors.required">country is required</div>
+                                                      </div>
+                                                    <p></p>
+                                                </div>
+                                        </div>
+
+                                        <div class=" col-sm-12 pinfo">
+                                            <div class="emailbtns">
+
+                                                <div class="saves">
+                                                    <button class="save-btn" type="submit">Save Changes</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                  </form>
+                              </div>
+                          </ng-template>
+
+
+
+
 
                                 <ngb-panel id="otp-sidebar2">
                                     <ng-template ngbPanelTitle>
@@ -62,13 +129,13 @@
                                         </span>
                                         </div>
                                     </ng-template>
+
                                     <ng-template ngbPanelContent>
                                         <div class="panel-body">
                                             <div id="view-logininformation-798275e4-d1dd-4d37-a977-497293c0fe5d">
                                                 <form [formGroup]="shippingAddressForm" (ngSubmit)="onAddressSubmit()">
                                                 <div class="row ">
-                                                    <div class=" col-sm-12 pinfo">
-
+                                                    <div class="col-sm-12 pinfo">
                                                                 <input formControlName="streetAddress" placeholder="Street address" [ngClass]="{ 'is-invalid': addressSubmitted && s.streetAddress?.errors }" class="form-control personalInfo" data-role="Address1" data-val="true" data-val-required="Street Address is required" id="ShippingAddress_Address1" name="ShippingAddress.Address1" type="text" value="">
                                                                 <!-- <span class="field-validation-valid" data-valmsg-for="ShippingAddress.Address1" data-valmsg-replace="true"></span> -->
                                                                 <div *ngIf="addressSubmitted && s.streetAddress.errors" class="field-validation-valid">
@@ -125,29 +192,13 @@
 
                                                         </div>
                                                     </div>
-
-
                                                 </div>
                                                 </form>
                                             </div>
                                         </div>
                                     </ng-template>
                                 </ngb-panel>
-
-
-
-
-
                             </ngb-accordion>
-
-
-
-
-
-
-
-
-
                         </div>
                     </div>
                 </div>
