--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
@@ -1,10 +1,16 @@
-<section class="backlink-header mob-check enrollment-upperBar">
+<section class="backlink-header mob-check account-setting-upperBar">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 back-link mb-4">
-                <a [routerLink]="['/store/cart']">
-                    Back to CART</a>
+            <div class="col-lg-8 col-md-12 back-link mb-4">
+                <a [routerLink]="['/store/cart']"><svg aria-hidden="true" focusable="false" data-prefix="far"
+                        data-icon="angle-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512"
+                        class="svg-inline--fa fa-angle-left fa-w-6 fa-3x">
+                        <path fill="currentColor"
+                            d="M4.2 247.5L151 99.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17L69.3 256l118.5 119.7c4.7 4.7 4.7 12.3 0 17L168 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 264.5c-4.7-4.7-4.7-12.3 0-17z"
+                            class=""></path>
+                    </svg>Back to CART</a>
             </div>
+
             <div class="visible-lg col-lg-4">
                 <div class="sidebar-checkout">
                     <div class="cart-sidebar">
@@ -29,7 +35,8 @@
                             <ngb-accordion [closeOthers]="false" [activeIds]="activeIds" class="panel-stepbar">
                                 <ngb-panel id="checkoutstep5" class="oneToFour">
                                     <ng-template ngbPanelTitle>
-                                        <span>Your Enroller</span>
+                                        <span>Your Enroller <br><p>Amanda Walsh, ID#42</p></span>
+                                        <div class="ero">
 
                                         <span class="arrow-stepp">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="6.6" height="11.2"
@@ -39,6 +46,7 @@
                                                     transform="translate(-630.6 -4.4)" />
                                             </svg>
                                         </span>
+                                        </div>
                                     </ng-template>
                                 </ngb-panel>
 
@@ -487,7 +495,28 @@
                                                                             <p> <a href="winknaturals.com">winknaturals.com</a>
                                                                             </p>
 
-                                                                            <span id="webalias-preview"></span>
+                                                                            <span id="webalias-preview">
+                                                                                <svg class="question" xmlns="http://www.w3.org/2000/svg" width="24"
+                                                                                height="25" viewBox="0 0 24 25">
+                                                                                <g id="Group_183" data-name="Group 183"
+                                                                                    transform="translate(-830 -877)">
+                                                                                    <g id="Ellipse_13" data-name="Ellipse 13"
+                                                                                        transform="translate(830 878)" fill="none"
+                                                                                        stroke="#1cb1c5" stroke-width="2">
+                                                                                        <circle cx="12" cy="12" r="12"
+                                                                                            stroke="none" />
+                                                                                        <circle cx="12" cy="12" r="11"
+                                                                                            fill="none" />
+                                                                                    </g>
+                                                                                    <text id="_" data-name="?"
+                                                                                        transform="translate(837 897)"
+                                                                                        fill="#1cb1c5" font-size="18.6"
+                                                                                        font-family="SegoeUI, Segoe UI">
+                                                                                        <tspan x="0" y="0">?</tspan>
+                                                                                    </text>
+                                                                                </g>
+                                                                            </svg>
+                                                                            </span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="row">
@@ -589,7 +618,60 @@
                                     <ng-template ngbPanelContent>
                                         <form [formGroup]="shippingAddressForm" (ngSubmit)="onAddressSubmit()">
                                             <div class="sidebar-ui">
+
                                                 <ngb-accordion activeIds="address-shipping">
+                                                    <ngb-panel id="address-shippinged">
+
+
+                                                        <ng-template ngbPanelTitle>
+                                                            <div class="heading-step1">
+                                                                <h4>Subscription Schedule</h4>
+                                                                <p>Start Date:<span class="data-span">{{startDate | date:
+                                                                            'MM/dd/yyyy'}}</span></p>
+                                                                <span class="arrow-stepp">
+                                                                        <svg xmlns="http://www.w3.org/2000/svg" width="6.6"
+                                                                            height="11.2" viewBox="0 0 6.6 11.2">
+                                                                            <path id="Path_2044" data-name="Path 2044"
+                                                                                d="M630.9,4.7a.967.967,0,0,0,0,1.4l3.9,3.9-3.9,3.9a.99.99,0,0,0,1.4,1.4l4.6-4.6a.967.967,0,0,0,0-1.4l-4.6-4.6A.967.967,0,0,0,630.9,4.7Z"
+                                                                                transform="translate(-630.6 -4.4)" />
+                                                                        </svg>
+                                                                    </span>
+                                                            </div>
+                                                        </ng-template>
+    
+    
+    
+    
+                                                        <ng-template ngbPanelContent>
+    
+                                                            <div class="content-card steps-inner">
+                                                                <div [className]="startDate ?  'special-field datafilled form-group ' : 'special-field dataempty form-group'" id="subscr-schedule">
+                                                                    <input type="text" class="form-control" bsDatepicker [minDate]="minDate" [bsConfig]="{ isAnimated: true, adaptivePosition: true, selectFromOtherMonth: true  }" [ngModelOptions]="{standalone: true}" [(ngModel)]="startDate" />
+                                                                    <label class="form-label">Select Start Date</label>
+                                                                    <span class="btn-add-promo">
+                                                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                                                            xmlns:xlink="http://www.w3.org/1999/xlink" width="24"
+                                                                            height="24" viewBox="0 0 24 24">
+                                                                            <defs>
+                                                                                <clipPath id="clip-path">
+                                                                                    <rect width="24" height="24" fill="none" />
+                                                                                </clipPath>
+                                                                            </defs>
+                                                                            <g id="Icon_Event_Rounded"
+                                                                                data-name="Icon / Event / Rounded" opacity="0.5"
+                                                                                clip-path="url(#clip-path)">
+                                                                                <rect id="Box" width="24" height="24" fill="none" />
+                                                                                <path id="Path_2017" data-name="Path 2017"
+                                                                                    d="M879.9,18h-12a1.075,1.075,0,0,1-1-1V7h14V17A1,1,0,0,1,879.9,18Zm-2-17V2h-8V1a1,1,0,0,0-2,0V2h-1a2.006,2.006,0,0,0-2,2V18a2.006,2.006,0,0,0,2,2h14a2.006,2.006,0,0,0,2-2V4a2.006,2.006,0,0,0-2-2h-1V1a1,1,0,0,0-2,0Zm0,10h-3a1.075,1.075,0,0,0-1,1v3a1.075,1.075,0,0,0,1,1h3a1.075,1.075,0,0,0,1-1V12A1,1,0,0,0,877.9,11Z"
+                                                                                    transform="translate(-862 2)" />
+                                                                            </g>
+                                                                        </svg>
+                                                                    </span>
+                                                                </div>
+                                                            </div>
+    
+                                                        </ng-template>
+                                                    </ngb-panel>
                                                     <ngb-panel id="address-shipping">
                                                         <ng-template ngbPanelTitle>
                                                             <div class="heading-step1">
